[package]
name = "cpu1sec"
version = "0.1.3"
edition = "2021"
description = "munin graph plugin for cpu statistics, 1second resolution"
license = "GPL-3.0-only"
authors = [ "Joerg Jaspert <joerg@ganneff.de>" ]
readme = "README.md"
repository = "https://github.com/Ganneff/cpu1sec"
keywords = [ "munin", "statistics", "daemon" ]

[package.metadata.deb]
assets = [
    ["target/release/cpu1sec", "usr/share/munin/plugins/cpu1sec", "755"],
]
maintainer-scripts = "debian/"
section = "net"
priority = "optional"
extended-description="1second resolution graphs for CPU data"
maintainer = "Joerg Jaspert <joerg@ganneff.de>"
copyright = "2022, Joerg Jaspert <joerg@ganneff.de>"
depends = ""

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cpu1sec", dest = "/usr/share/munin/plugins/cpu1sec", mode = "755" },
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
simple_logger = "^2.1"
tempfile = "^3.3"
parse_int = "^0.6"
procfs = "^0.12"
anyhow = "1.0.57"
munin-plugin = "0.1.5"

[profile.release]
lto = true
codegen-units = 1
