[package]
name = "munin-cpu1sec"
version = "0.2.2"
edition = "2021"
description = "munin graph plugin for cpu statistics, 1second resolution"
license = "GPL-3.0-only"
authors = ["Jörg Jaspert <joerg@debian.org>"]
readme = "README.md"
repository = "https://github.com/Ganneff/munin-cpu1sec"
keywords = [ "munin", "statistics", "daemon", "munin-plugin" ]
categories = [ "command-line-utilities" ]

[package.metadata.deb]
assets = [
    ["target/release/munin-cpu1sec", "usr/share/munin/plugins/cpu1sec", "755"],
]
maintainer-scripts = "debian/"
section = "net"
priority = "optional"
extended-description="1second munin resolution graphs for CPU data"
maintainer = "Joerg Jaspert <joerg@ganneff.de>"
copyright = "2022, Joerg Jaspert <joerg@ganneff.de>"
depends = "munin-node"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/munin-cpu1sec", dest = "/usr/share/munin/plugins/cpu1sec", mode = "755" },
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
simple_logger = "^2.1"
procfs = "^0.12"
anyhow = "1.0.57"
munin-plugin = "0.2"

[profile.release]
lto = true
codegen-units = 1
